<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_sort"
        />
    <RadioGroup 
        android:id="@+id/rg_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <RadioButton 
            android:id="@+id/total_bonus_value_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_total_bonus_radio"
            />
        <RadioButton
            android:id="@+id/net_bonus_value_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_net_bonus_radio"
            />
        <RadioButton
            android:id="@+id/annual_value_of_keeping_card_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/annual_value_of_keeping_card_radio"
            />
        <RadioButton
            android:id="@+id/alphabetical_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alphabetical_radio"
            />
        <RadioButton
            android:id="@+id/first_purchase_bonus_value_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_purchase_bonus_value_radio"
            />
        <RadioButton
            android:id="@+id/spend_per_month_for_bonus_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spend_per_month_for_bonus_radio"
            />
        <RadioButton
            android:id="@+id/foreign_transaction_fee_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/foreign_transaction_fee_radio"
            />
        <RadioButton
            android:id="@+id/net_bonus_value_with_manufactured_spend_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/net_bonus_value_with_manufactured_spend_radio"
            />
    </RadioGroup>
</LinearLayout>
