<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    	<TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/planned_spend"
        	android:id="@+id/tv_monthlyspend"
        	/>
    	<EditText 
    	    android:layout_width="100dp"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="right|fill"
    	    android:hint="@string/value_hint"
    	    android:id="@+id/et_monthlyspend"
    	    android:inputType="numberDecimal"
    	    />
    </LinearLayout>
    <TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/loss_rate"
        	android:id="@+id/tv_lossrate"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    	<TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/as_a_percent"/>
    	<EditText 
    	    android:layout_width="100dp"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="right|fill"
    	    android:hint="@string/value_hint"
    	    android:id="@+id/et_lossrate"
    	    android:inputType="numberDecimal"
    	    />
    </LinearLayout>
    <!-- 
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    	<CheckBox
    	    android:text="@string/show_business_cards"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:id="@+id/show_business_cards"
    	    android:visibility="visible"
    	    />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    	<CheckBox
    	    android:text="@string/show_personal_cards"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:id="@+id/show_personal_cards"
    	    android:visibility="visible"
    	    />
    </LinearLayout>
    -->
    <RadioGroup 
        android:id="@+id/rg_business_personal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <RadioButton 
            android:id="@+id/show_personal_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_personal_cards"
            />
        <RadioButton 
            android:id="@+id/show_business_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_business_cards"
            />
        <RadioButton 
            android:id="@+id/show_business_and_personal_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_business_and_personal_cards"
            />
    </RadioGroup>
    <TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/input_as_cpm"
        	/>
    <TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/spg"
        	android:id="@+id/tv_spg"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    	
    	<EditText 
    	    android:layout_width="100dp"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="right|fill"
    	    android:hint="@string/value_hint"
    	    android:id="@+id/et_spg"
    	    android:inputType="numberDecimal"
    	    />
    </LinearLayout>
    <TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/ur"
        	android:id="@+id/tv_ur"
        	/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    	
    	<EditText 
    	    android:layout_width="100dp"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="right|fill"
    	    android:hint="@string/value_hint"
    	    android:id="@+id/et_ur"
    	    android:inputType="numberDecimal"
    	    />
    </LinearLayout>
    <TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/mr"
        	android:id="@+id/tv_mr"
        	/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    	
    	<EditText 
    	    android:layout_width="100dp"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="right|fill"
    	    android:hint="@string/value_hint"
    	    android:id="@+id/et_mr"
    	    android:inputType="numberDecimal"
    	    />
    </LinearLayout>
    <TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/delta"
        	android:id="@+id/tv_delta"
        	/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    	
    	<EditText 
    	    android:layout_width="100dp"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="right|fill"
    	    android:hint="@string/value_hint"
    	    android:id="@+id/et_delta"
    	    android:inputType="numberDecimal"
    	    />
    </LinearLayout>
    <TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/alaska"
        	android:id="@+id/tv_alaska"
        	/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    	
    	<EditText 
    	    android:layout_width="100dp"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="right|fill"
    	    android:hint="@string/value_hint"
    	    android:id="@+id/et_alaska"
    	    android:inputType="numberDecimal"
    	    />
    </LinearLayout>
    <TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/american"
        	android:id="@+id/tv_american"
        	/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    	
    	<EditText 
    	    android:layout_width="100dp"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="right|fill"
    	    android:hint="@string/value_hint"
    	    android:id="@+id/et_american"
    	    android:inputType="numberDecimal"
    	    />
    </LinearLayout>
    <TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/united"
        	android:id="@+id/tv_united"
        	/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    	
    	<EditText 
    	    android:layout_width="100dp"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="right|fill"
    	    android:hint="@string/value_hint"
    	    android:id="@+id/et_united"
    	    android:inputType="numberDecimal"
    	    />
    </LinearLayout>
    <TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/usair"
        	android:id="@+id/tv_usair"
        	/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    	
    	<EditText 
    	    android:layout_width="100dp"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="right|fill"
    	    android:hint="@string/value_hint"
    	    android:id="@+id/et_usair"
    	    android:inputType="numberDecimal"
    	    />
    </LinearLayout>
    <TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/jetblue"
        	android:id="@+id/tv_jetblue"
        	/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    	
    	<EditText 
    	    android:layout_width="100dp"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="right|fill"
    	    android:hint="@string/value_hint"
    	    android:id="@+id/et_jetblue"
    	    android:inputType="numberDecimal"
    	    />
    </LinearLayout>
    <TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/spirit"
        	android:id="@+id/tv_spirit"
        	/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    	
    	<EditText 
    	    android:layout_width="100dp"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="right|fill"
    	    android:hint="@string/value_hint"
    	    android:id="@+id/et_spirit"
    	    android:inputType="numberDecimal"
    	    />
    </LinearLayout>
    <TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/southwest"
        	android:id="@+id/tv_southwest"
        	/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    	
    	<EditText 
    	    android:layout_width="100dp"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="right|fill"
    	    android:hint="@string/value_hint"
    	    android:id="@+id/et_southwest"
    	    android:inputType="numberDecimal"
    	    />
    </LinearLayout>
    <TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/ba"
        	android:id="@+id/tv_ba"
        	/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    	
    	<EditText 
    	    android:layout_width="100dp"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="right|fill"
    	    android:hint="@string/value_hint"
    	    android:id="@+id/et_ba"
    	    android:inputType="numberDecimal"
    	    />
    </LinearLayout>
    <TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/frontier"
        	android:id="@+id/tv_frontier"
        	/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    	
    	<EditText 
    	    android:layout_width="100dp"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="right|fill"
    	    android:hint="@string/value_hint"
    	    android:id="@+id/et_frontier"
    	    android:inputType="numberDecimal"
    	    />
    </LinearLayout>
    
    <TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/carlson"
        	android:id="@+id/tv_carlson"
        	/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    	
    	<EditText 
    	    android:layout_width="100dp"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="right|fill"
    	    android:hint="@string/value_hint"
    	    android:id="@+id/et_carlson"
    	    android:inputType="numberDecimal"
    	    />
    </LinearLayout>
    <TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/amtrak"
        	android:id="@+id/tv_amtrak"
        	/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    	
    	<EditText 
    	    android:layout_width="100dp"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="right|fill"
    	    android:hint="@string/value_hint"
    	    android:id="@+id/et_amtrak"
    	    android:inputType="numberDecimal"
    	    />
    </LinearLayout>
    <TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/arrival"
        	android:id="@+id/tv_arrival"
        	/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    	
    	<EditText 
    	    android:layout_width="100dp"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="right|fill"
    	    android:hint="@string/value_hint"
    	    android:id="@+id/et_arrival"
    	    android:inputType="numberDecimal"
    	    />
    </LinearLayout>
    
    <TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/usbank"
        	android:id="@+id/tv_usbank"
        	/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    	
    	<EditText 
    	    android:layout_width="100dp"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="right|fill"
    	    android:hint="@string/value_hint"
    	    android:id="@+id/et_usbank"
    	    android:inputType="numberDecimal"
    	    />
    </LinearLayout>
    <TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/discover"
        	android:id="@+id/tv_discover"
        	/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    	
    	<EditText 
    	    android:layout_width="100dp"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="right|fill"
    	    android:hint="@string/value_hint"
    	    android:id="@+id/et_discover"
    	    android:inputType="numberDecimal"
    	    />
    </LinearLayout>
</LinearLayout>
</ScrollView>