<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
    android:orientation="vertical"
    >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/main_linear_layout_old"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/origin_airport" 
        android:id="@+id/origin_airport"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/origin_airport_hint" 
        android:id="@+id/origin_hint"
        />
    <AutoCompleteTextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/origin"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destination_airport" 
        android:id="@+id/destination_airport"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/destination_airport_hint" 
        android:id="@+id/destination_hint"
        />
    <AutoCompleteTextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/destination"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Class of service" 
        android:id="@+id/class_of_service_text"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rg"
        >
		<RadioButton 
            android:text="Economy"
            android:checked="true"
            android:id="@+id/economy"
            />
        <RadioButton 
            android:text="Business"
            android:id="@+id/business"
            />
        <RadioButton 
            android:text="First"
            android:id="@+id/first"
            />
    </RadioGroup>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="What is the price of a ticket on Kayak?"
        android:visibility="gone"
        />
    <EditText 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/price"
        android:hint="$465"
        android:visibility="gone"
        />
	<Button 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/how_do_i_get_there"
	    android:onClick="launchListOfCards"
	    android:id="@+id/how_do_i_get_there_button"
	    />
	<TextView 
	    android:text="Want to see a destination added? Have a question?"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    />
	<Button 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="Email us!"
	    android:onClick="emailDeveloper"
	    />
	<Button 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="      "
	    android:onClick="revealOldLayout"
	    android:id="@+id/secretButton"
	    />
	</LinearLayout>
</ScrollView>